spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ main ul li {
   margin-top: 1px;
   position: relative;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
   position: static;
